tests/check/symbolic-paraby.co
// RUN: choreo %s 2>&1 -o - | FileCheck %s

#include "choreo.h"

__cok__ { 
__co_device__ extern "C" void kernel(int * a, int * b, int * c, int n) {
  for (int i = 0; i < n; ++i)
    c[i] = a[i] + b[i];
}
} 

__co__ s32 [N, 17, 128] ele_add(s32 [N, 17, 128] lhs, s32 [N, 17, 128] rhs, int PF) { 
  s32[lhs.span] output;

  parallel p by -5, q = {qx,qy} by [-2, 0] { 
    with index = {pf, x, y} in [N/PF, 17, 4] { 
      foreach index {
        lhs_load = dma.copy.async lhs.chunkat(p#pf, x, y) => local;
        rhs_load = dma.copy.async rhs.chunkat(p#pf, x, y) => local;
        wait lhs_load, rhs_load;

        local s32[lhs_load.span] l1_out;

        call kernel(lhs_load.data, rhs_load.data, l1_out, |lhs_load.span|);

        out_store = dma.copy.async l1_out => output.chunkat(p#pf, x, y);
        wait out_store;
      }
    }
  }
  return output;
}

// CHECK: error: bound -5 in parallelby is invalid: should be greater than 0.
// CHECK: error: bound item -2 in parallelby is invalid: should be greater than 0.
// CHECK: error: bound item 0 in parallelby is invalid: should be greater than 0.
